--- a/waffle/preview/src/main/res/layout/activity_main.xml
+++ b/waffle/preview/src/main/res/layout/activity_main.xml
@@ -4,9 +4,13 @@
   ~ Licensed under the MIT.
   ~ Please see full license: https://github.com/TodayDoneDone/donedone-android/blob/main/LICENSE
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
+</ScrollView>
