--- a/waffle/src/main/res/values/colors.xml
+++ b/waffle/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
 <resources>
     <color name="color_primary_blue_01">#2347F3</color>
     <color name="color_base_white_01">#F5F5F5</color>
-    <color name="color_base_black_01">#1C1C1C</color>
+    <color name="color_base_black_01">#0A0A0A</color>
     <color name="color_base_gray_01">#DBDBDB</color>
+    <color name="color_state_alert">#ED2C2B</color>
 </resources>
