--- a/waffle/src/androidTest/res/layout/activity_waffle_count_view.xml
+++ b/waffle/src/androidTest/res/layout/activity_waffle_count_view.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Designed and developed by DoneDone Team 2023.
   ~
   ~ Licensed under the MIT.
@@ -12,6 +11,5 @@
     <me.donedone.waffle.android.widget.WaffleCountView
         android:id="@+id/count_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 </LinearLayout>
