버튼이 아닌 리스트 아이템 전체로 클린 이벤트 이동

--- a/waffle/preview/src/main/res/layout/list_item_sample.xml
+++ b/waffle/preview/src/main/res/layout/list_item_sample.xml
@@ -17,21 +17,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp"
-        android:orientation="horizontal">
+        android:background="?android:listChoiceBackgroundIndicator"
+        android:onClick="@{() -> viewModel.action.run()}"
+        android:orientation="horizontal"
+        android:padding="8dp">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="24sp"
-            android:text="@{viewModel.title}" />
+            android:text="@{viewModel.title}"
+            android:textSize="24sp" />
 
         <me.donedone.waffle.android.widget.WaffleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="false"
+            android:focusable="false"
             android:text="go"
-            android:onClick="@{() -> viewModel.action.run()}"
             app:waffleButtonStyle="Primary" />
 
     </LinearLayout>
